--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+mx-docs (20171119mx17) mx; urgency=medium
+
+  * updated manuals
+
+ -- Dolphin <dolphinoracle@gmail.com>  Sun, 19 Nov 2017 14:29:17 -0700
+
+mx-docs (20171118mx17) mx; urgency=medium
+
+  * New release, fixes spacing problem.
+
+ -- Steven Pusser <stevep@mxlinux.org>  Sat, 18 Nov 2017 10:35:26 -0800
+
+mx-docs (20171117mx17+1) mx; urgency=medium
+
+  * Build for the MX 17 repo; no changes.
+
+ -- Steven Pusser <stevep@mxlinux.org>  Fri, 17 Nov 2017 10:17:06 -0800
+
 mx-docs (20171111mx17) mx; urgency=medium
 
   * added switch for multiple language manuals.
