--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20171207mx17) mx; urgency=medium
+
+  * ready for RC 
+
+ -- Dolphin <dolphinoracle@gmail.com>  Thu, 07 Dec 2017 06:50:17 -0500
+
 mx-docs (20171119mx17) mx; urgency=medium
 
   * updated manuals
