--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20180128mx17) mx; urgency=medium
+
+  * added french and german translations 
+
+ -- Dolphin <dolphinoracle@gmail.com>  Sun, 28 Jan 2018 14:38:12 -0500
+
 mx-docs (20171207mx17) mx; urgency=medium
 
   * ready for RC 
