spainish, plus misc. revisions

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20180301mx17) UNRELEASED; urgency=medium
+
+  * new mx17 spainish translation,misc updates
+
+ -- Dolphin <dolphinoracle@gmail.com>  Thu, 01 Mar 2018 19:39:24 -0500
+
 mx-docs (20180128mx17) mx; urgency=medium
 
   * added french and german translations 
