--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20180819mx17) mx; urgency=medium
+
+  * adding italian manual (mx17) 
+
+ -- Dolphin <dolphinoracle@gmail.com>  Sun, 19 Aug 2018 22:53:49 -0400
+
 mx-docs (20180305mx17) mx; urgency=medium
 
   * updated manual 
