--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20181211mx18) mx; urgency=medium
+
+  * update manual mx18 
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Tue, 11 Dec 2018 18:54:15 -0500
+
 mx-docs (20180819mx17) mx; urgency=medium
 
   * adding italian manual (mx17) 
