--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20190123mx18) mx; urgency=medium
+
+  * update translations 
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Wed, 23 Jan 2019 18:47:05 -0500
+
 mx-docs (20181211mx18) mx; urgency=medium
 
   * update manual mx18 
