--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20190208mx18) mx; urgency=medium
+
+  * updated manual
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Fri, 08 Feb 2019 19:32:36 -0500
+
 mx-docs (20190123mx18) mx; urgency=medium
 
   * update translations 
