revised for mx18.1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20190310mx18) mx; urgency=medium
+
+  * revised manual for mx 18
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Mon, 11 Mar 2019 18:37:31 -0400
+
 mx-docs (20190208mx18) mx; urgency=medium
 
   * updated manual
