--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20190519mx18.3) mx; urgency=medium
+
+  * update installer section
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Sun, 19 May 2019 12:48:40 -0400
+
 mx-docs (20190310mx18.2) mx; urgency=medium
 
   * desktop file translations
