updated translations for pl and de

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20190614mx18.3+1) mx; urgency=medium
+
+  * updated translations for pl and de
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Sun, 14 Jul 2019 13:30:37 -0400
+
 mx-docs (20190614mx18.3) mx; urgency=medium
 
   * updated manual 
