modifiy permissions on FAQ.desktop

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20190814mx19) mx; urgency=medium
+
+  * added faq 
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Wed, 14 Aug 2019 21:52:52 -0400
+
 mx-docs (20190614mx18.3+1) mx; urgency=medium
 
   * updated translations for pl and de
