--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20190819mx19) mx; urgency=medium
+
+  * update FAQ 
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Mon, 19 Aug 2019 19:04:38 -0400
+
 mx-docs (20190814mx19) mx; urgency=medium
 
   * added faq 
