--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20190821mx19) mx; urgency=medium
+
+  * buster manual
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Wed, 21 Aug 2019 21:48:42 -0400
+
 mx-docs (20190819mx19) mx; urgency=medium
 
   * update FAQ 
