--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20190904mx19) mx; urgency=medium
+
+  * mx19 beta2 manual
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Thu, 05 Sep 2019 16:47:39 -0400
+
 mx-docs (20190821mx19) mx; urgency=medium
 
   * buster manual
