--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20190922mx19) mx; urgency=medium
+
+  * update FAQ  
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Sun, 22 Sep 2019 15:41:48 -0400
+
 mx-docs (20190904mx19) mx; urgency=medium
 
   * mx19 beta2 manual
