--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20190922mx19+1) mx; urgency=medium
+
+  * translations refrest 
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Sat, 28 Sep 2019 17:17:43 -0400
+
 mx-docs (20190922mx19) mx; urgency=medium
 
   * update FAQ  
