--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20191009mx19) mx; urgency=medium
+
+  * updated FAQ 
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Wed, 09 Oct 2019 21:17:29 -0400
+
 mx-docs (20190922mx19+1) mx; urgency=medium
 
   * translations refrest 
