--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20191012mx19) mx; urgency=medium
+
+  * updated FAQs for multi languages 
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Sat, 12 Oct 2019 10:02:51 -0400
+
 mx-docs (20191009mx19) mx; urgency=medium
 
   * updated FAQ 
