--- a/debian/install
+++ b/debian/install
@@ -1,7 +1,8 @@
 *.pdf                      usr/local/share/doc 
+FAQ/*.pdf				usr/local/share/doc
+FAQ/tr/*.pdf			usr/local/share/doc
 Help.desktop		   usr/share/applications
-mx-manual		   usr/bin
-mx-faq				usr/bin
+bin/*		   usr/bin
 manual.desktop		etc/skel/Desktop
 FAQ.desktop			etc/skel/Desktop
 FAQ.desktop			usr/share/applications
