--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20191021mx19) mx; urgency=medium
+
+  * new translations (id, pt, fr, sk)
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Mon, 21 Oct 2019 10:32:49 -0400
+
 mx-docs (20191019mx19) mx; urgency=medium
 
   * added FAQ tranlsations  (es, pl, se)  
