--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20191104mx19) mx; urgency=medium
+
+  * manual update (missing from 20191103mx19) 
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Mon, 04 Nov 2019 19:13:47 -0500
+
 mx-docs (20191103mx19) mx; urgency=medium
 
   * new translations faq
