--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20200211mx19+1) mx; urgency=medium
+
+  * update control file
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Mon, 30 Mar 2020 22:38:15 -0400
+
 mx-docs (20200211mx19) mx; urgency=medium
 
   * update for mx19.1
