--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-docs (20200801mx19) mx; urgency=medium
+
+  * updated main manual with KDE-plasma stuff 
+
+ -- Dolphin Oracle <dolphin@littlebyte>  Sun, 02 Aug 2020 11:20:57 -0400
+
 mx-docs (20200211mx19+2) mx; urgency=medium
 
   * adding thai translation 
