--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mx-docs (20200817mx19) mx; urgency=medium
+
+  * Non-maintainer upload.
+  * Spanish translation of latest Manual added
+
+ -- j b <jb@X1Cmx>  Mon, 17 Aug 2020 10:39:31 -0400
+
 mx-docs (20200801mx19) mx; urgency=medium
 
   * updated main manual with KDE-plasma stuff 
