--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mx-docs (20200817mx21) mx; urgency=medium
+
+  * remove help and faq from /etc/skel
+  * will still show up on bullseye 
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Mon, 01 Mar 2021 18:47:27 -0500
+
 mx-docs (20200817mx19) mx; urgency=medium
 
   * Non-maintainer upload.
