--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mx-docs (20200817mx21+nmu1) UNRELEASED; urgency=medium
+
+  * Non-maintainer upload.
+  * removed MX-16 IT translation, stored locally
+
+ -- Dolphin Oracle <jb@Len510A>  Fri, 19 Mar 2021 11:28:20 -0400
+
 mx-docs (20200817mx21) mx; urgency=medium
 
   * remove help and faq from /etc/skel
